syntax = "proto3";

option csharp_namespace = "StateHolder";

package StateHolder;

service StateHolderService {
  rpc StateQuery (StateRequest) returns (StateResponse);
}

message StateRequest {
  string ticket = 1;
}

message StateResponse {
	string ticket = 1;
    string state = 2;
}
